--- a/panoptic-sam.ipynb
+++ b/panoptic-sam.ipynb
@@ -17,18 +17,13 @@
     "import random\n",
     "\n",
     "# Grounding DINO\n",
-    "# from groundingdino.util import box_ops\n",
-    "# from groundingdino.util.inference import annotate, load_image, predict, load_model\n",
     "import groundingdino.datasets.transforms as T\n",
-    "from groundingdino.models import build_model\n",
     "from groundingdino.util import box_ops\n",
-    "from groundingdino.util.slconfig import SLConfig\n",
-    "from groundingdino.util.utils import clean_state_dict\n",
     "from groundingdino.util.inference import annotate, predict, load_model\n",
     "\n",
     "# segment anything\n",
     "from segment_anything import build_sam, SamPredictor \n",
-    "import cv2\n",
+    "# import cv2\n",
     "\n",
     "# clipseg\n",
     "from transformers import CLIPSegProcessor, CLIPSegForImageSegmentation"
@@ -40,13 +35,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load groundingdino\n",
+    "# load models\n",
     "def loadGroundingDINO(ckpt_config, ckpt_file, device):\n",
     "    dino_model = load_model(ckpt_config, ckpt_file, device)\n",
     "    print(\"GroundingDINO loaded.\")\n",
     "    return dino_model\n",
     "\n",
-    "# load SAM\n",
     "def loadSAM(sam_ckpt, device):\n",
     "    sam = build_sam(checkpoint=sam_ckpt)\n",
     "    sam.to(device=device)\n",
