--- a/visualisation.ipynb
+++ b/visualisation.ipynb
@@ -1,19 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\LHaiHui\\AppData\\Local\\anaconda3\\envs\\grounding_sam_cpu\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "source": [
+    "### Import and Load Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# visualisation\n",
     "import numpy as np\n",
@@ -44,7 +42,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load models\n",
     "def loadGroundingDINO(ckpt_config, ckpt_file, device):\n",
     "    dino_model = load_model(ckpt_config, ckpt_file, device)\n",
     "    print(\"GroundingDINO loaded.\")\n",
@@ -65,12 +62,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Helper Functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# helper methods\n",
     "def load_image_for_dino(image):\n",
     "    transform = T.Compose(\n",
     "        [\n",
@@ -283,12 +286,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Main Function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# main function\n",
     "def generate_panoptic_mask(\n",
     "    image,\n",
     "    thing_categories,\n",
@@ -392,43 +401,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\LHaiHui\\AppData\\Local\\anaconda3\\envs\\grounding_sam_cpu\\lib\\site-packages\\torch\\functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at C:\\cb\\pytorch_1000000000000\\work\\aten\\src\\ATen\\native\\TensorShape.cpp:3484.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "final text_encoder_type: bert-base-uncased\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.seq_relationship.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias']\n",
-      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GroundingDINO loaded.\n",
-      "SAM loaded.\n",
-      "CLIPSeg loaded.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define checkpoint and config paths\n",
     "dino_ckpt_config = \"../groundingdino/groundingdino/config/GroundingDINO_SwinT_OGC.py\"\n",
@@ -476,7 +451,7 @@
     }
    ],
    "source": [
-    "file = \"9909\"\n",
+    "file = \"\"\n",
     "image = Image.open(\"../images/\" + file + \".png\")\n",
     "print(\"Image '\" + file + \".png' loaded.\")\n",
     "\n",
@@ -495,8 +470,8 @@
     "# prompts for \"automatic\" recognition\n",
     "thing_categories = [\n",
     "    \"car\", \"bike\", #vehicles\n",
-    "    \"door\", \"gate\", \"cone\", \"table\", \"chair\", \"ladder\", \"fire hydrant\", \"garbage bin\",\n",
     "    \"tree\", \"forest\", # greenery\n",
+    "    \"door\", \"gate\", \"cone\", \"table\", \"chair\", \"ladder\", \"fire hydrant\", \"garbage bin\",\n",
     "    \"person\"\n",
     "]\n",
     "stuff_categories = [\n",
@@ -513,24 +488,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m thing_boxes, thing_category_ids, visualization \u001b[39m=\u001b[39m dino_detection(\n\u001b[0;32m      2\u001b[0m     dino_model,\n\u001b[0;32m      3\u001b[0m     image,\n\u001b[0;32m      4\u001b[0m     image_array,\n\u001b[0;32m      5\u001b[0m     thing_categories,\n\u001b[0;32m      6\u001b[0m     categories_to_id,\n\u001b[0;32m      7\u001b[0m     dino_box_threshold,\n\u001b[0;32m      8\u001b[0m     dino_text_threshold,\n\u001b[0;32m      9\u001b[0m     device,\n\u001b[0;32m     10\u001b[0m     visualize\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[0;32m     11\u001b[0m )\n\u001b[0;32m     12\u001b[0m visualization\n",
-      "Cell \u001b[1;32mIn[3], line 36\u001b[0m, in \u001b[0;36mdino_detection\u001b[1;34m(model, image, image_array, category_names, category_names_to_id, box_threshold, text_threshold, device, visualize)\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n\u001b[0;32m     28\u001b[0m     boxes, logits, phrases \u001b[39m=\u001b[39m predict(\n\u001b[0;32m     29\u001b[0m         model\u001b[39m=\u001b[39mmodel,\n\u001b[0;32m     30\u001b[0m         image\u001b[39m=\u001b[39mdino_image,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     34\u001b[0m         device\u001b[39m=\u001b[39mdevice,\n\u001b[0;32m     35\u001b[0m     )\n\u001b[1;32m---> 36\u001b[0m category_ids \u001b[39m=\u001b[39m [category_names_to_id[phrase] \u001b[39mfor\u001b[39;00m phrase \u001b[39min\u001b[39;00m phrases]\n\u001b[0;32m     38\u001b[0m \u001b[39mif\u001b[39;00m visualize:\n\u001b[0;32m     39\u001b[0m     annotated_frame \u001b[39m=\u001b[39m annotate(\n\u001b[0;32m     40\u001b[0m         image_source\u001b[39m=\u001b[39mimage_array, boxes\u001b[39m=\u001b[39mboxes, logits\u001b[39m=\u001b[39mlogits, phrases\u001b[39m=\u001b[39mphrases\n\u001b[0;32m     41\u001b[0m     )\n",
-      "Cell \u001b[1;32mIn[3], line 36\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n\u001b[0;32m     28\u001b[0m     boxes, logits, phrases \u001b[39m=\u001b[39m predict(\n\u001b[0;32m     29\u001b[0m         model\u001b[39m=\u001b[39mmodel,\n\u001b[0;32m     30\u001b[0m         image\u001b[39m=\u001b[39mdino_image,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     34\u001b[0m         device\u001b[39m=\u001b[39mdevice,\n\u001b[0;32m     35\u001b[0m     )\n\u001b[1;32m---> 36\u001b[0m category_ids \u001b[39m=\u001b[39m [category_names_to_id[phrase] \u001b[39mfor\u001b[39;00m phrase \u001b[39min\u001b[39;00m phrases]\n\u001b[0;32m     38\u001b[0m \u001b[39mif\u001b[39;00m visualize:\n\u001b[0;32m     39\u001b[0m     annotated_frame \u001b[39m=\u001b[39m annotate(\n\u001b[0;32m     40\u001b[0m         image_source\u001b[39m=\u001b[39mimage_array, boxes\u001b[39m=\u001b[39mboxes, logits\u001b[39m=\u001b[39mlogits, phrases\u001b[39m=\u001b[39mphrases\n\u001b[0;32m     41\u001b[0m     )\n",
-      "\u001b[1;31mKeyError\u001b[0m: ''"
-     ]
-    }
-   ],
+   "source": [
+    "## Visualisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "thing_boxes, thing_category_ids, visualization = dino_detection(\n",
     "    dino_model,\n",
